--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Bible Text Generation</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.jsdelivr.net/npm/onnxjs/dist/onnx.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/onnxjs/dist/onnx.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web/dist/ort.min.js"></script>
     <script src="script.js" defer></script>
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
