--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Bible Text Generation</title>
     <link rel="stylesheet" href="style.css">
     <!-- <script src="https://cdn.jsdelivr.net/npm/onnxjs/dist/onnx.min.js"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web/dist/ort.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web@1.13.0-dev.20221007-f4b944e1a/dist/ort.es6.min.js"></script>
     <script src="script.js" defer></script>
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     
