--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h1 class="book-name">Genesis 1</h1>
         </div>
         <div class="header">
-            <h2 class="book-name">This application is an AI-powered text generator trained on the bible. It can</h1>
+            <h2 class="book-name">This is GPTesus, a generator of holy verses. It was trained on the holy Bible to share more of its Truth. </h1>
         </div>
         <div class="header">
             <div class="input-group">
